--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "I love magnolias. So I named my crypto blockchain project after them.",
   "main": "index.js",
- "scripts": {
-  "start": "node server.mjs",
-  "dev": "nodemon server.mjs"
-}
-,
+  "scripts": {
+    "start": "node server.mjs",
+    "dev-node": "cross-env GENERATE_NODE_PORT='true' nodemon server.mjs",
+    "dev": "npm run start-redis && nodemon server.mjs",
+    "start-redis": "redis-server --daemonize yes"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ellarhur/magnoliachain.git"
@@ -23,12 +24,13 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.2",
-    "pubnub": "^9.6.0"
+    "redis": "^5.5.6"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.10"
   }
 }
